# env-proxy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  build-docs.sh  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: benchmark.yml  docs.yml  lint.yml  publish.yml  release.yml
benchmarks/: conftest.py  test_benchmarks.py
docs/: env_proxy.html  index.md
docs/explanation/: lazy-vs-frozen.md  override-semantics.md  why-envconfig.md
docs/how-to/: custom-converters.md  define-envconfig.md  generate-sample-env.md  handle-errors.md  override-values.md  tune-key-cache.md  using-envproxy.md  validate-and-freeze.md
docs/reference/: env-vars.md  exceptions.md  field-options.md  key-transformations.md  type-hints.md
docs/tutorial/: getting-started.md
env_proxy/: __init__.py  _sentinel.py  env_config.py  env_proxy.py  exceptions.py
scripts/: gen_api_ref.py
tests/: _annotation_contract.py  test_annotation_inference.py  test_annotation_inference_future.py  test_env_config.py  test_env_proxy.py  test_sentinel.py  test_typing.py
