[tool.poetry]
name = "env-proxy"
version = "1.2.0"
description = "Creates a class used to query environmental variables with typehinting a conversion to basic Python types."
authors = ["Tomas Votava <info@tomasvotava.eu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tomasvotava/env-proxy"
repository = "https://github.com/tomasvotava/env-proxy"

[tool.poetry.group.dev.dependencies]
pytest = "^9"
mypy = "<2"
ruff = "<1"
pytest-cov = "^6.0.0"
pytest-benchmark = "^5.2.3"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
typing-extensions = { version = ">=4.6.0", python = "<3.11" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = [
    "-v",
    "--cov=env_proxy",
    "--cov-report=xml:coverage.xml",
    "--cov-report=json:coverage.json",
    "--cov-report=term-missing",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "N",
    "UP",
    "S",
    "A",
    "DTZ",
    "PT",
    "SIM",
    "PTH",
    "PD",
    "RUF",
    "T20",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # allow asserts in tests
    "RUF018", # allow asserts with walrus in tests
    "D",      # ignore missing documentation in tests
]
"benchmarks/**" = [
    "S101",   # allow asserts in benchmarks
    "RUF018", # allow asserts with walrus in benchmarks
    "D",      # ignore missing documentation in benchmarks
]

[tool.mypy]
strict = true
